package ucf.assignments;

import java.util.ArrayList;
import java.util.Map;

public class ToDoMaster
{
    Map<String, ToDoList> masterList;

    public ArrayList<Task> getList(String title)
    {
        //If masterList contains title
            //return list
        return null;
    }

    public Map<String, ToDoList> getMasterList()
    {
        return masterList;
    }
}
