@startuml
'https://plantuml.com/class-diagram

class Task {
    date
    description
    status

    gets()
    sets()
    toString()
}

class ToDoList {
    ArrayList<Task> todo
    String title

    addItem()
    removeItem()
    displayList(int)
}

class ToDo {
    main()
    start()
}

class ToDoMaster {
    Map<String, ToDoList> masterList

    searchMasterList(String)
    getList(String)
    get()
}

class ToDoController {
    current : ToDoList
    currentTask : Task
    master : Map
}

class ToDoView {
}

ToDo--ToDoView
ToDo--ToDoController
ToDo--ToDoMaster
ToDoMaster*--ToDoList : at least 100 <
ToDoList*--Task : at least 100 <
javafx.Application<|---ToDo

@enduml